[package]
name = "bevy_gravirollback"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Tomáš Pecl <tomaspecl@email.cz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serialize = ["serde"]

[dependencies]
bevy = "0.12"
bevy_utils = "0.12"
serde = { version = "1", features = ["derive"], optional = true }

# this should be only used for the examples
[dev-dependencies]
rand = "0.8"
bevy-inspector-egui = "0.22"

[profile.dev.package."*"]
opt-level = 3
